--- a/style.css
+++ b/style.css
@@ -7,6 +7,15 @@
 
 }
 
+#flower {
+  position: absolute;
+  top: 450px;
+  left: 150px;
+  opacity: 0;
+  transition: opacity 1s;
+
+}
+
 #player {
   position: absolute;
   top: 200px;
